--- a/build.gradle
+++ b/build.gradle
@@ -18,12 +18,16 @@ repositories {
 	maven { url 'https://repo.spring.io/snapshot' }
 }
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testCompile "org.mockito:mockito-core:1.9.5"
+allprojects{
+	dependencies {
+		implementation 'org.springframework.boot:spring-boot-starter-web'
+		developmentOnly 'org.springframework.boot:spring-boot-devtools'
+		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		testCompile "org.mockito:mockito-core:1.9.5"
+		testCompile 'junit:junit:4.12'
+	}
 }
+
 
 
 
